--- a/config/about.html
+++ b/config/about.html
@@ -23,6 +23,8 @@
         * 共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
         <b>4.捐  赠：</b><br>
         <img width="120px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/><br>
+        <img width="120px" src="https://upload.jianshu.io/users/upload_avatars/605390/85115888-d4db-4ffc-aa82-f44b83442b13.png?imageMogr2/auto-orient/strip|imageView2/1/w/100/h/100/format/webp"/><br>
+                
         <b>4.捐赠名单：</b><br>
             (感谢支持)<br>
         * 1 <u>Mr3us0t</u> 30￥
