--- a/config/about.html
+++ b/config/about.html
@@ -6,29 +6,37 @@
     <br>
     <b>Name:</b>&nbsp;csdroid
     <b>Version:</b>&nbsp;csdroid v1.0
+    <br>
     <hr>
 </center>
-    <div style="float:buttom">
-        <b>1.它是什么：</b><br>
-        一款cobaltstrike的安卓版本客户端<br>
-            <b>2.它能干什么：</b><br>
-        当你在外面不方便使用电脑时候，我想它是有一点点用处的<br>
-        <div style="justify-content:left">
+<div style="float:buttom">
+    <b>1.它是什么：</b><br>
+    一款cobaltstrike的安卓版本客户端<br>
+    <b>2.它能干什么：</b><br>
+    当你在外面不方便使用电脑时候，我想它是有一点点用处的<br>
+    <div style="justify-content:left">
 
-            * 会话管理：实时上下线监听<br>
-            * 命令执行：提供shell和sleep两条命令的支持<br>
-            * 命令小偷：可单个或全部导出某个/全部用户的beacon shell操作命令(2个文件，命令，命令和其回显)<br>
-        </div>
-        <b>3.关于它：</b><br>
-        * 共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
-        <b>4.捐  赠：</b><br>
-        <img width="120px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/><br>
-        <img width="120px" src="https://upload.jianshu.io/users/upload_avatars/605390/85115888-d4db-4ffc-aa82-f44b83442b13.png?imageMogr2/auto-orient/strip|imageView2/1/w/100/h/100/format/webp"/><br>
-                
-        <b>4.捐赠名单：</b><br>
-            (感谢支持)<br>
-        * 1 <u>Mr3us0t</u> 30￥
+        * 会话管理：实时上下线监听<br>
+        * 命令执行：提供shell和sleep两条命令的支持<br>
+        * 命令小偷：可单个或全部导出某个/全部用户的beacon shell操作命令(2个文件，命令，命令和其回显)<br>
     </div>
+    <b>3.关于它：</b><br>
+    * 共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
+    <b>4.捐  赠：</b><br>
+    <center><img width="120px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/></center><br>
+
+    <b>4.捐赠名单：</b><br>
+    (感谢支持)<br>
+    * 1 <u>Mr3us0t</u> 30￥
 </div>
-    <hr>
+</div>
+<hr>
+<br><br>
+<center>
+    <b>本工具处于学习目的开发，严禁用于违法犯罪！</b>
+    <br>
+    linshao作品,版权所有
+    Copyright ®linshao All Rights Reserved
+</center>
+<br><br>
 </body>
