--- a/config/about.html
+++ b/config/about.html
@@ -18,12 +18,12 @@
 
         * 会话管理：实时上下线监听<br>
         * 命令执行：提供shell和sleep两条命令的支持<br>
-        * 命令小偷：可单个或全部导出某个/全部用户的beacon shell操作命令(2个文件，命令，命令和其回显)<br>
+        * 命令小偷：可单个或全部导出某个/全部用户的beacon shell操作命令(2个文件，命令，命令和其回显。保存位置：外部储存/csdroid/命令小偷/日期/...)<br>
     </div>
     <b>3.关于它：</b><br>
     * 共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
     <b>4.捐  赠：</b><br>
-    <center><img width="120px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/></center><br>
+    <center><img width="100px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/></center><br>
 
     <b>4.捐赠名单：</b><br>
     (感谢支持)<br>
