--- a/config/update.html
+++ b/config/update.html
@@ -15,7 +15,7 @@
     <b>2.更新日志：</b><br>
     <p>&nbsp;&nbsp;csdroid v1.0 2022年10月13日</p><br>
     <b>3.开发日志：</b><br>
-    <pre>
+    <p>
     【v1.0】
     1.2022年9月10日：
                 反编译cs4.5版本进行读源代码，了解登录及验证方式
@@ -63,7 +63,7 @@
 
     14.2022年10月10日：
                  命令导出已经实现功能，细节仍需处理
-    </pre>
+    </p>
 
 
 
@@ -79,7 +79,7 @@
 <hr>
 <br><br>
 <center>
-    <b>本工具处于学习目的开发，严禁用于违法犯罪！</b>
+    <b>本工具出于学习目的开发，严禁用于违法犯罪！</b>
     <br>
     linshao作品,版权所有
     Copyright ®linshao All Rights Reserved
