--- a/config/update.html
+++ b/config/update.html
@@ -15,56 +15,55 @@
     <b>2.更新日志：</b><br>
     <p>&nbsp;&nbsp;csdroid v1.0 2022年10月13日</p><br>
     <b>3.开发日志：</b><br>
-    <p>
+
     【v1.0】
-    1.2022年9月10日：
-                反编译cs4.5版本进行读源代码，了解登录及验证方式
-
-    2.2022年9月11日：
-                设计ui，登录页、主界面、侧滑
-
-    3.2022年9月12日：
-                开始设计代码，解决SSLsocket连接密码无法获取套件问题
-                使用java复现连接登录流程
-
-    4.2022年9月13日：：
-                新建android项目，使用androidx构建，引入MD设计，实现基础框架和ui登录界面的美化
-
-    5.2022年9月14日：
-                移植java代码到安卓项目，实现了登录，。
-                [bug]:无法使用序列化传递socket对象，且数据输入和输出流存在于子线程中，无法获取到实例(已完美解决：通过单例类传递socket和teamqueue对象)
-
-    6.2022年9月15日：已完成登录服务端，可获取到beacon信息
-
-    7.2022年9月17日：完成session上线布局，收到的session与界面activity绑定，实现实时刷新数据(出现bug，无法获取到新加入的会话)
-
-    8.2022年9月18日：通过调试研究处较好方案如下：
-
-    9.2022年9月20日：已经完成实时上线绑定，即时同步删除会话，(修复bug)切换界面保存当前会话状态
-                 已经实现根据服务端实时同步上线，更新心跳，会话移除
-
-    10. 2022年10月6日：
-                    实现命令执行的回显，（未区分beacon任务）
-                （发现bug）：列表会话超过10个心跳停止更新
-
-    11.2022年10月7日：
-                 完美解决命令执行回显问题，（下步准备添加更改休眠时间）
-                 （获取元数据的时候把历史命令执行结果存放到BeaconTasksLog里面
-                 ShellFragment里面通过pid去获取之前的命令执行结果，设置到页面，并开始监听以后的命令执行，结果写到BeaconTasksLog）
-
-    12.2022年10月8日：
-                 添加更改休眠时间功能
-                 （bug）排查AndroidManifest中service的name属性少输入.导致无报错无反应
-                 把主要与服务器交互的组件由分散改为service集中处理
-
-    13.2022年10月9日：
-                 通宵重构任务的上线，使代码清晰，管理会话更加清晰便捷
-                 导出命令完成界面的设计和实现
-
-    14.2022年10月10日：
-                 命令导出已经实现功能，细节仍需处理
-    </p>
-
+<br>    1.2022年9月10日：
+<br>                反编译cs4.5版本进行读源代码，了解登录及验证方式
+<br>
+<br>    2.2022年9月11日：
+<br>                设计ui，登录页、主界面、侧滑
+<br>
+<br>    3.2022年9月12日：
+<br>                开始设计代码，解决SSLsocket连接密码无法获取套件问题
+<br>                使用java复现连接登录流程
+<br>
+<br>    4.2022年9月13日：：
+<br>                新建android项目，使用androidx构建，引入MD设计，实现基础框架和ui登录界面的美化
+<br>
+    <br>    5.2022年9月14日：
+    <br>                移植java代码到安卓项目，实现了登录，。
+    <br>                [bug]:无法使用序列化传递socket对象，且数据输入和输出流存在于子线程中，无法获取到实例(已完美解决：通过单例类传递socket和teamqueue对象)
+    <br>
+    <br>    6.2022年9月15日：已完成登录服务端，可获取到beacon信息
+    <br>
+    <br>    7.2022年9月17日：完成session上线布局，收到的session与界面activity绑定，实现实时刷新数据(出现bug，无法获取到新加入的会话)
+    <br>
+    <br>    8.2022年9月18日：通过调试研究处较好方案如下：
+    <br>
+    <br>   9.2022年9月20日：已经完成实时上线绑定，即时同步删除会话，(修复bug)切换界面保存当前会话状态
+    <br>                 已经实现根据服务端实时同步上线，更新心跳，会话移除
+    <br>
+    <br>    10. 2022年10月6日：
+    <br>                    实现命令执行的回显，（未区分beacon任务）
+    <br>                （发现bug）：列表会话超过10个心跳停止更新
+    <br>
+    <br>    11.2022年10月7日：
+    <br>                 完美解决命令执行回显问题，（下步准备添加更改休眠时间）
+    <br>                 （获取元数据的时候把历史命令执行结果存放到BeaconTasksLog里面
+    <br>                 ShellFragment里面通过pid去获取之前的命令执行结果，设置到页面，并开始监听以后的命令执行，结果写到BeaconTasksLog）
+    <br>
+    <br>    12.2022年10月8日：
+    <br>                 添加更改休眠时间功能
+    <br>                 （bug）排查AndroidManifest中service的name属性少输入.导致无报错无反应
+    <br>                 把主要与服务器交互的组件由分散改为service集中处理
+    <br>
+    <br>    13.2022年10月9日：
+    <br>                 通宵重构任务的上线，使代码清晰，管理会话更加清晰便捷
+    <br>                导出命令完成界面的设计和实现
+    <br>
+    <br>   14.2022年10月10日：
+    <br>                 命令导出已经实现功能，细节仍需处理
+  
 
 
 
