--- a/config/about.html
+++ b/config/about.html
@@ -11,7 +11,7 @@
 </center>
 <div style="float:buttom">
     <b>1.它是什么：</b><br>
-    一款cobaltstrike的安卓版本客户端<br>
+    一款cobaltstrike的安卓版本客户端，暂时只支持4.5版本的登录，其他版本按理来说也很简单，需要修改请post issues<br>
     <b>2.它能干什么：</b><br>
     当你在外面不方便使用电脑时候，我想它是有一点点用处的<br>
     <div style="justify-content:left">
