--- a/config/about.html
+++ b/config/about.html
@@ -11,7 +11,7 @@
 </center>
 <div style="float:buttom">
     <b>1.它是什么：</b><br>
-    一款cobaltstrike的安卓版本客户端，暂时只支持4.5版本的登录，其他版本按理来说也很简单，需要修改请post issues<br>
+    一款cobaltstrike的安卓版本客户端，暂时只支持4.5版本的登录，其他版本按理来说也很简单，需要修改请post issues，后续看需求情况决定是否更新。<br>
     <b>2.它能干什么：</b><br>
     当你在外面不方便使用电脑时候，我想它是有一点点用处的<br>
     <div style="justify-content:left">
@@ -21,7 +21,10 @@
         * 命令小偷：可单个或全部导出某个/全部用户的beacon shell操作命令(2个文件，命令，命令和其回显。保存位置：外部储存/csdroid/命令小偷/日期/...)<br>
     </div>
     <b>3.关于它：</b><br>
-    * 共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
+    共计开发历时40天，包括阅读逆向代码，构建测试代码，以及程序开发<br>
+
+    <b>2.会开源吗：</b><br>
+    极大概率会<br>
     <b>4.捐  赠：</b><br>
     <center><img width="100px" src="https://user-images.githubusercontent.com/96420060/195404727-49206e9b-60f7-474b-b638-c31d5e4411eb.jpg"/></center><br>
 
@@ -32,8 +35,20 @@
 </div>
 <hr>
 <br><br>
+
+<br> 【组件来源】：
+<br> (雪花飘落效果)https://github.com/liu-mushan/ParticleMotion
+<br> (textview显示htmlview)https://github.com/SufficientlySecure/html-textview
+<br> 【参考资料】：
+<br> (Navigation): 实现侧边栏导航https://blog.csdn.net/JMW1407/article/details/125714708
+<br> (DataBindinghttps)://blog.csdn.net/qq_41818873/article/details/121149104
+<br> (toolbar实现https)://blog.csdn.net/qq_42324086/article/details/117390236
+<br> (侧边栏实现https)://blog.csdn.net/weixin_47062100/article/details/122962198
+<br> 【其他辅助】：
+<br> [ui在线设计]https://js.design/f/vTkHIc?p=OcuiCyjQAX
+
 <center>
-    <b>本工具处于学习目的开发，严禁用于违法犯罪！</b>
+    <b>本工具出于学习目的开发，严禁用于违法犯罪！</b>
     <br>
     linshao作品,版权所有
     Copyright ®linshao All Rights Reserved
