--- a/config/about.html
+++ b/config/about.html
@@ -36,6 +36,16 @@
 <hr>
 <br><br>
 
+<br> 组件来源:
+<br> (雪花飘落效果)https://github.com/liu-mushan/ParticleMotion
+<br> (textview显示htmlview)https://github.com/SufficientlySecure/html-textview
+<br> 参考资料：
+<br> (Navigation): 实现侧边栏导航https://blog.csdn.net/JMW1407/article/details/125714708
+<br> (DataBindinghttps)://blog.csdn.net/qq_41818873/article/details/121149104
+<br> (toolbar实现https)://blog.csdn.net/qq_42324086/article/details/117390236
+<br> (侧边栏实现https)://blog.csdn.net/weixin_47062100/article/details/122962198
+<br> 其他辅助：
+<br> [ui在线设计]https://js.design/f/vTkHIc?p=OcuiCyjQAX
 
 <center>
     <b>本工具出于学习目的开发，严禁用于违法犯罪！</b>
