--- a/config/update.html
+++ b/config/update.html
@@ -64,7 +64,7 @@
     <br>   14.2022年10月10日：
     <br>                 命令导出已经实现功能，细节仍需处理
     <br> 
-    <br>
+    <br>    15.2022年10月13日： 自动适配服务器cs版本进行登录（理论全版本通用），暂时4.3,4.5测试成功
     <br> 
 
     <b>4.捐  赠：</b><br>
